[package]
name = "flb_filter_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.142"
serde_bytes = "0.11.17"
rmp-serde = "1.3.0"
chrono = "0.4.41"
libc = "0.2.175"
log = "0.4.27"
serde_yaml = "0.9.34"
